--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "input-otp": "^1.4.2",
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.484.0",
+    "motion": "^12.23.24",
     "next": "14.2.26",
     "next-themes": "^0.4.6",
     "react": "^18",
@@ -73,16 +74,17 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
-    "@types/node": "^20",
+    "@types/node": "^20.19.24",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/tailwindcss": "^3.0.11",
     "eslint": "^8",
     "eslint-config-next": "14.2.26",
     "eslint-config-prettier": "^10.1.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5"
   }
 }
